tests/fail/registering/term typed with a pure sort.mm0
pure sort s;
term a :s;
